added sale, game & player services